Fix missing rounded corners on overflowing media transcript content areas

--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -359,6 +359,8 @@ $videojs-track-height: 0.5em;
 
       overflow: auto;
 
+      border-radius: 0.1px;
+
       @include colour.thick-keyline(left);
 
       &::before {
